# ds-decomp

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  rustfmt.toml
.github/workflows/: build.yml  release.yml
assets/: arm9.lcf.template  module.lcf.template
assets/signatures/: FS_Init.yaml  FS_LoadOverlay.yaml  FS_UnloadOverlay.yaml  FX_Init.yaml  GXS_SetGraphicsMode.yaml  GX_DisableBankForLCDC.yaml  GX_DispOff.yaml  GX_HBlankIntr.yaml  GX_Init.yaml  GX_SetBankForBG.yaml  GX_SetBankForLCDC.yaml  GX_SetBankForOBJ.yaml  GX_SetBankForSubBG.yaml  GX_SetBankForSubOBJ.yaml  GX_SetGraphicsMode.yaml  GX_VBlankIntr.yaml  OS_Init.yaml  OS_InitAlarm.yaml  OS_InitTick.yaml  OS_WaitVBlankIntr.yaml  PM_GoSleepMode.yaml  RTC_Init.yaml  SND_Init.yaml  TP_Init.yaml  __assert_failed.yaml  __cxa_vec_cleanup.yaml  __cxa_vec_ctor.yaml  __destroy_global_chain.yaml  __memset_impl.yaml  __register_global_object.yaml  _dadd.yaml  _ddiv.yaml  _dflt.yaml  _dmul.yaml  _dsub.yaml  _fflt.yaml  _ll_udiv.yaml  _s32_div_f.yaml  _u32_div_f.yaml
assets/signatures/GameSpy/: AddServerToDeadlist.yaml  AllKeysPresent.yaml  ArrayClear.yaml  ArrayDeleteAt.yaml  ArrayGrow.yaml  ArrayInsertAt.yaml  ArrayInsertSorted.yaml  ArrayMapBackwards.yaml  ArrayMapBackwards2.yaml  ArrayRemoveAt.yaml  ArrayReplaceAt.yaml  ArraySearch.yaml  B64Encode.yaml  BucketAdd.yaml  BucketAvg.yaml  BucketConcat.yaml  BucketDiv.yaml  BucketMult.yaml  BucketNew.yaml  BucketSet.yaml  BucketSub.yaml  BufferAddByte.yaml  BufferAddData.yaml  BufferAddInt.yaml  BufferAddNTS.yaml  CheckRcode.yaml  CheckValidKey.yaml  CloseStatsConnection.yaml  EngineCallback.yaml  ErrorDisconnect.yaml  FIFOAddFront.yaml  FIFOAddRear.yaml  FIFOClear.yaml  FIFOGetFirst.yaml  FIFORemove.yaml  FindFinal.yaml  FindRequest.yaml  FloatKeyCompare.yaml  FreeElement.yaml  FreeKeyList.yaml  (+275 more)
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/analysis/: data.rs  functions.rs  mod.rs  overlay_groups.rs  signature.rs
cli/src/cmd/: apply.rs  delink.rs  dis.rs  format.rs  init.rs  init2.rs  lcf.rs  mod.rs  objdiff.rs
cli/src/cmd/check/: mod.rs  modules.rs  symbols.rs
cli/src/cmd/dump/: ambig_relocs.rs  elf_symbols.rs  mod.rs
cli/src/cmd/fix/: ctor_symbols.rs  ctor_zero.rs  mod.rs  thumb_nop.rs
cli/src/cmd/import/: mod.rs  symbols.rs
cli/src/cmd/json/: delinks.rs  mod.rs
cli/src/cmd/rom/: build.rs  config.rs  extract.rs  mod.rs
cli/src/cmd/sig/: apply.rs  list.rs  mod.rs  new.rs  new_elf.rs
cli/src/config/: delinks.rs  mod.rs  program.rs  relocation.rs  section.rs  symbol.rs
cli/src/rom/: rom.rs
cli/src/util/: bytes.rs  io.rs  mod.rs  path.rs
cli/tests/: test_roundtrip.rs
cli/tests/assets/: README.md
docs/: delinks.md  relocs.md  symbols.md
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/analysis/: ctor.rs  data.rs  exception.rs  function_branch.rs  function_start.rs  functions.rs  illegal_code.rs  inline_table.rs  jump_table.rs  main.rs  mod.rs  secure_area.rs
lib/src/analysis/code/: block_map.rs  blocks.rs  functions.rs  mod.rs  range_set.rs
lib/src/config/: config.rs  delinks.rs  link_time_const.rs  linker_var.rs  mod.rs  module.rs  relocations.rs  section.rs  symbol.rs
lib/src/rom/: rom.rs
lib/src/util/: io.rs  mod.rs  parse.rs
src/: lib.rs  main.rs
src/analysis/: ctor.rs  data.rs  function_branch.rs  function_start.rs  functions.rs  inline_table.rs  jump_table.rs  main.rs  mod.rs  overlay_groups.rs  secure_area.rs
src/cmd/: arm9.rs  delink.rs  dis.rs  disassemble.rs  elf.rs  init.rs  lcf.rs  mod.rs  objdiff.rs  overlay.rs  rom.rs
src/cmd/check/: mod.rs  modules.rs
src/cmd/import/: mod.rs  symbols.rs
src/cmd/rom/: build.rs  config.rs  extract.rs  mod.rs
src/config/: config.rs  delinks.rs  mod.rs  module.rs  program.rs  relocation.rs  section.rs  splits.rs  symbol.rs  xref.rs
src/util/: debug.rs  ds.rs  io.rs  mod.rs  parse.rs  path.rs
tests/: test_init.rs  test_roundtrip.rs
tests/assets/: .gitignore  README.md
tests/configs/: README.md
tests/roms/: .gitignore  README.md
