[package]
name = "ds-decomp"
version = "0.2.2"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-decomp"
readme = "README.md"
description = "Command-line toolkit for decompiling DS games."
publish = false

[[bin]]
name = "dsd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
argp = "0.3.0"
bon = "2.3.0"
clap-num = "1.1.1"
ds-rom = "0.4"
env_logger = "0.11.5"
fxhash = "0.2.1"
globset = "0.4"
log = "0.4.22"
objdiff-core = { git = "https://github.com/encounter/objdiff.git", tag = "v2.3.0", default-features = false, features = ["config"] }
object = { git = "https://github.com/AetiasHax/object.git", branch = "dev", default-features = false, features = ["elf", "build"] }
path-slash = "0.2.1"
pathdiff = "0.2.1"
petgraph = { version = "0.6.5", default-features = false }
serde = "1.0.204"
serde_yml = "0.0.11"
snafu = { version = "0.8.4", features = ["backtrace"] }
unarm = { version = "1.6", default-features = false, features = ["arm", "thumb", "v5te"] }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
zip = "2.2.0"
