[package]
name = "ds-decomp"
version = "0.2.3"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-decomp"
readme = "README.md"
description = "Command-line toolkit for decompiling DS games."
publish = false

[[bin]]
name = "dsd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
argp = "0.3"
bon = "3.0"
ds-rom = { git = "https://github.com/AetiasHax/ds-rom.git", branch = "main" }
env_logger = "0.11"
fxhash = "0.2"
globset = "0.4"
log = "0.4"
objdiff-core = { version = "2.3", default-features = false, features = ["config"] }
object = { git = "https://github.com/AetiasHax/object.git", branch = "dev", default-features = false, features = ["elf", "build"] }
path-slash = "0.2"
pathdiff = "0.2"
petgraph = { version = "0.6", default-features = false }
serde = "1.0"
serde_yml = "0.0"
snafu = { version = "0.8", features = ["backtrace"] }
unarm = { git = "https://github.com/AetiasHax/unarm.git", branch = "main", default-features = false, features = ["arm", "thumb", "v5te"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.2"
