
[package]
name = "ds-decomp-cli"
version = "0.10.2"
edition = "2024"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-decomp"
readme = "README.md"
description = "Command-line toolkit for decompiling DS games."
publish = false

[[bin]]
name = "dsd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
cpp_demangle = "0.4"
ds-decomp = { path = "../lib" }
ds-rom = "0.6"
env_logger = "0.11"
fxhash = "0.2"
log = "0.4"
objdiff-core = { git = "https://github.com/encounter/objdiff", version = "3.5", default-features = true, features = [
  "config",
  "serde",
] }
object = { git = "https://github.com/AetiasHax/object.git", branch = "dev", default-features = false, features = [
  "elf",
  "build",
] }
path-clean = "1.0"
path-slash = "0.2"
pathdiff = "0.2"
petgraph = { version = "0.6", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_norway = "0.9"
snafu = { version = "0.8", features = ["backtrace"] }
tinytemplate = "1.2"
typed-path = "0.12"
unarm = { version = "1.8", default-features = false, features = [
  "arm",
  "thumb",
  "v5te",
] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
zip = "3.0"

[lints.clippy]
from_str_radix_10 = "allow"
new_without_default = "allow"
comparison_chain = "allow"
len_without_is_empty = "allow"
module_inception = "allow"
if_same_then_else = "allow"
