[package]
name = "ds-decomp-config"
version = "0.3.1"
edition = "2021"

[dependencies]
ds-rom = "0.4"
log = "0.4"
serde = "1.0"
serde_yml = "0.0"
snafu = { version = "0.8", features = ["backtrace"] }

[lints.clippy]
from_str_radix_10 = "allow"
new_without_default = "allow"
len_without_is_empty = "allow"
module_inception = "allow"
