[package]
name = "ds-decomp"
version = "0.4.0"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-decomp"
readme = "README.md"
description = "Library for ds-decomp, a DS decompilation toolkit."

[dependencies]
ds-rom = "0.4"
log = "0.4"
serde = "1.0"
serde_yml = "0.0"
snafu = { version = "0.8", features = ["backtrace"] }
unarm = { version = "1.6", default-features = false, features = ["arm", "thumb", "v5te"] }

[lints.clippy]
from_str_radix_10 = "allow"
new_without_default = "allow"
len_without_is_empty = "allow"
module_inception = "allow"
if_same_then_else = "allow"
