[package]
name = "ds-decomp"
version = "0.8.0"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
repository = "https://github.com/AetiasHax/ds-decomp"
readme = "README.md"
description = "Library for ds-decomp, a DS decompilation toolkit."

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }
ds-rom = "0.6"
log = "0.4"
serde = "1.0"
serde_yml = "0.0"
snafu = { version = "0.8", features = ["backtrace"] }
unarm = { version = "1.8", default-features = false, features = ["arm", "thumb", "v5te"] }

[lints.clippy]
from_str_radix_10 = "allow"
new_without_default = "allow"
len_without_is_empty = "allow"
module_inception = "allow"
if_same_then_else = "allow"
